objects/Invoice_Line_Item__c.object
<CustomObject>
    <fields>
        <fullName>CGST_Percentage__c</fullName>
        <description>This Field store CGST Percentage from Integration</description>
        <label>CGST Percentage</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CGST__c</fullName>
        <description>This Field store CGST from Integration</description>
        <label>CGST</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cash_Discount_CD__c</fullName>
        <description>This Field store Cash Discount from Integration</description>
        <label>Cash Discount(CD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cash_Discount_Percentage__c</fullName>
        <label>Cash Discount Percentage</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>This Field store Description from Integration</description>
        <label>Description</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Final_Price__c</fullName>
        <description>This Field store Final Price from Integration</description>
        <label>Final Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IGST_Percentage__c</fullName>
        <description>This Field store IGST Percentage from Integration</description>
        <label>IGST Percentage</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>IGST__c</fullName>
        <description>This Field store IGST from Integration</description>
        <label>IGST</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Invoice_No__c</fullName>
        <description>This Field store Invoice No. from Integration</description>
        <externalId>true</externalId>
        <label>Invoice No.</label>
        <length>250</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>OriPlast_Product_Unit_Price__c</fullName>
        <description>This field fetch Unit Price from related product</description>
        <formula>Product_Price__r.Unit_Price__c</formula>
        <label>OriPlast Product Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ori_Plast_Invoice__c</fullName>
        <label>Ori-Plast Invoice</label>
        <referenceTo>Invoice__c</referenceTo>
        <relationshipName>Ori_plast_Invoice_Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Ori_Plast_Product_Name__c</fullName>
        <description>This Field is used to show Ori-Plast Product name</description>
        <formula>Ori_Plast_Product__r.Name</formula>
        <label>Ori-Plast Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ori_Plast_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ori-Plast Product</label>
        <referenceTo>OriPlast_Product__c</referenceTo>
        <relationshipName>Ori_plast_Invoice_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Price_After_Discount__c</fullName>
        <description>This Field store Price After Discount from Integration</description>
        <label>Price After Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_Price__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Price</label>
        <referenceTo>Product_Price__c</referenceTo>
        <relationshipLabel>Invoice Line Items</relationshipLabel>
        <relationshipName>Invoice_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <description>This Field store Quantity from Integration</description>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rate__c</fullName>
        <label>Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SGST_Percentage__c</fullName>
        <description>This Field store SGST Percentage from Integration</description>
        <label>SGST Percentage</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SGST__c</fullName>
        <description>This Field store SGST from Integration</description>
        <label>SGST</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SKU__c</fullName>
        <label>Item Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Discount_Percentage__c</fullName>
        <label>Total Discount %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_Price__c</fullName>
        <description>This Field store Total Price (Quantity*Unit Price)</description>
        <formula>OriPlast_Product_Unit_Price__c  *  Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Trade_Discount_TD__c</fullName>
        <description>This Field store Trade Discount(TD) from Integration</description>
        <label>Trade Discount(TD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Trade_Discount__c</fullName>
        <description>This Field store Trade Discount % from Integration</description>
        <label>Trade Discount %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Unit_of_Measure__c</fullName>
        <description>This Field store Unit of Measure from Integration</description>
        <label>UOM</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Invoice Line Item</label>
    <nameField>
        <displayFormat>ILN-{0000000}</displayFormat>
        <label>Invoice-Line-Item No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoice Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>